0.11.9
 - tests: make sure all segmenters have clear type definitions
0.11.8
 - reg: do not close the background thread of the event queue
0.11.7
 - enh: add more debugging messages for feature extraction workers
0.11.6
 - enh: add more debugging messages for feature extraction workers
0.11.5
 - setup: fix bad package discovery
0.11.4
 - fix: properly handle empty logs
0.11.3
 - fix: make sure values in tables dictionary are one-dimensional
0.11.2
 - meta: increment pipeline ID (texture feature computation)
 - fix: HDF5Data was not pickable
 - fix: HDF5Data did not properly handle tables
 - enh: add context manager for CPUSegmenter
 - enh: record and log execution time of segmentation and feature extraction
 - enh: properly handle border case for computing contour-moments
 - enh: properly handle empty images/masks in haralick texture features
 - tests: do not use numba's JIT during testing (coverage)
0.11.1
 - fix: fix GPUSegmenter labeling
0.11.0
 - feat: introduce GPUSegmenter base class
 - fix: handle bytes-values in HDF5 attributes
 - ref: correctly introduce `requires_background_correction` for segmenters
 - setup: don't requrie cibuildwheel
0.10.0
 - enh: some minor improvements in efficiency
 - ref: increment DCNUM_PPID_GENERATION for the sake of clarity
 - ref: unify dealing with num_workers and debugging
0.0.9
 - fix: properly propagate event extraction keyword arguments
 - fix: QueueCollectorThread used uint16 for enumerating indices
 - fix: handle case where number of events is not multiple of chunk_size
 - enh: reduce thread waiting times
 - enh: add bounds check for image cache
0.0.8
 - feat: introduce QueueCollectorThread
 - feat: introduce SegmenterManagerThread
 - feat: instroduce EventExtractorManagerThread and corresponding workers
 - enh: minor improvements for HDF5ImageCache and ImageCorrCache
 - enh: use data size as cache size if smaller than requested chunk size
 - enh: return dictionary for brightness feature computation