@@ -1,4 +1,5 @@
 0.11.9
+ - fix: properly support table data of length 1
  - tests: make sure all segmenters have clear type definitions
 0.11.8
  - reg: do not close the background thread of the event queue
